User Authentication Design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
     <string name="register">Register</string>
     <string name="login_to_let_s_buy">Login to Let\'s Buy</string>
     <string name="register_to_let_s_buy">Register to Let\'s buy</string>
+    <string name="user_email">user email</string>
+    <string name="user_password">user password</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="user_name">user name</string>
+    <string name="customer">Customer</string>
+    <string name="seller">Seller</string>
+    <string name="admin">Admin</string>
+    <string name="already_have_an_account">Already have an account?</string>
 </resources>
